--- a/app/views/restuarants/index.html.erb
+++ b/app/views/restuarants/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Restuarants</h1>
+<div class="jumbotron">
+  <h2> YelpDemo is the best way to find food and shit on local restuaraunts. </h2>
+  <h3> Explore the favorite diners pastry shops and eateries in your community.  <br/>
+  Leave reviews and ratings for your fellow foodies. </h3>
+</div>
 
 <table class="table table-hover table-condensed">
   <thead>
@@ -31,3 +35,5 @@
 <br>
 
 <%= link_to 'New Restuarant', new_restuarant_path, class: "btn btn-link"  %>
+
+<%= image_tag "https://s3-us-west-1.amazonaws.com/yelpdemoa/happy_footer.png" %>
