--- a/app/views/restuarants/show.html.erb
+++ b/app/views/restuarants/show.html.erb
@@ -1,9 +1,9 @@
-
+<div class="row">
+<div class="col-md-6">
 <%= image_tag @restuarant.image_url %>
-<p>
-  <strong>Name:</strong>
+<h2>
   <%= @restuarant.name %>
-</p>
+</h2>
 
 <p>
   <strong>Address:</strong>
@@ -17,8 +17,24 @@
 
 <p>
   <strong>Website:</strong>
-  <%= @restuarant.website %>
+  <%= link_to @restuarant.website, @restuarant.website %>
 </p>
+<%= link_to "Write Review", new_restuarant_review_path(@restuarant), class: "btn btn-primary"%>
 
+</div>
+<div class="col-md-6">
+	<h2> Reviews </h2>
+	<% if @reviews.blank? %>
+		<h3> No reviews yet. Be the first to write one! </h3>
+	<% else %>
+		<% @reviews.each do |review| %>
+		<p> <%= review.rating %> </p>
+		<p> <%= review.comment %> </p>
+		<% end %>
+	<%end%> 
+</div>
+</div>
+<div class="row">
 <%= link_to 'Edit', edit_restuarant_path(@restuarant), class: "btn btn-link"  %> |
 <%= link_to 'Back', restuarants_path, class: "btn btn-link"  %>
+</div>
