--- a/app/views/restuarants/show.html.erb
+++ b/app/views/restuarants/show.html.erb
@@ -28,7 +28,8 @@
 		<h3> No reviews yet. Be the first to write one! </h3>
 	<% else %>
 		<% @reviews.each do |review| %>
-		<p> <%= review.rating %> </p>
+		<!--<p> <%= review.rating %> </p>-->
+		<div class="star-rating" data-score= <%= review.rating %>> </div>
 		<p> <%= review.comment %> </p>
 		<% end %>
 	<%end%> 
@@ -38,3 +39,13 @@
 <%= link_to 'Edit', edit_restuarant_path(@restuarant), class: "btn btn-link"  %> |
 <%= link_to 'Back', restuarants_path, class: "btn btn-link"  %>
 </div>
+
+<script>
+$('.star-rating').raty({
+	path: 'https://s3-us-west-1.amazonaws.com/yelpdemoa/stars/',
+	readOnly: true,
+	score: function() {
+		return $(this).attr('data-score');
+	}
+});
+</script>
