--- a/app/views/restuarants/show.html.erb
+++ b/app/views/restuarants/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-<div class="col-md-6">
+<div class="col-md-3">
 <%= image_tag @restuarant.image_url %>
 
 <div class="star-rating" data-score= <%= @avgreviews %> ></div>
@@ -25,16 +25,30 @@
 <%= link_to "Write Review", new_restuarant_review_path(@restuarant), class: "btn btn-primary"%>
 
 </div>
-<div class="col-md-6">
+<div class="col-md-9">
 	<h2> Reviews </h2>
-	<table class="table">
-		<tbody>
+	
 		<% if @reviews.blank? %>
 			<h3> No reviews yet. Be the first to write one! </h3>
 		<% else %>
+		<table class="table">
+		<tbody>
+			<thead>
+				<tr>
+					<th class="col-md-3"> </th>
+					<th class="col-md-9"> </th>
+				</tr>
+			</thead>
+
 			<% @reviews.each do |review| %>
 			<tr>
 		<!--<p> <%= review.rating %> </p>-->
+			<td>
+				<h4>
+					<%= "#{review.user.first_name.capitalize} #{review.user.last_name.capitalize[0]}." %>
+					</h4>
+				<p> <%= review.created_at.strftime("%-m/%-d/%y") %></p>
+				</td>
 			<td>
 			<div class="star-rating" data-score= <%= review.rating %>> </div>
 			<p> <%= h(review.comment).gsub(/\n/, '<br/>').html_safe %> </p>
