Set User Permissions

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @review %> |
+<%= link_to 'Show', restuarant_review_path(@restuarant, @review) %> |
 <%= link_to 'Back', restuarant_path(@restuarant) %>
