--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -10,5 +10,5 @@
   <%= @review.comment %>
 </p>
 
-<%= link_to 'Edit', edit_review_path(@review) %> |
-<%= link_to 'Back', reviews_path %>
+<%= link_to 'Edit', edit_restuarant_review_path(@restuarant, @review) %> |
+<%= link_to 'Back', restuarant_path(@restuarant) %>
