--- a/app/views/restuarants/index.html.erb
+++ b/app/views/restuarants/index.html.erb
@@ -11,20 +11,26 @@
       <th>Address</th>
       <th>Phone</th>
       <th>Website</th>
-      <th colspan="3"></th>
+      <% if user_signed_in? && current_user.admin? %>
+
+      <th colspan="2"></th>
+
+      <% end %>
     </tr>
   </thead>
 
   <tbody>
     <% @restuarants.each do |restuarant| %>
       <tr>
-        <td><%= restuarant.name %></td>
+        <td><%= link_to restuarant.name, restuarant %></td>
         <td><%= restuarant.address %></td>
         <td><%= restuarant.phone %></td>
         <td><%= link_to "Restuarant Website", restuarant.website %></td>
-        <td><%= link_to 'Show', restuarant, class: "btn btn-link" %></td>
+        <% if user_signed_in? && current_user.admin? %>
+
         <td><%= link_to 'Edit', edit_restuarant_path(restuarant), class: "btn btn-link"  %></td>
         <td><%= link_to 'Destroy', restuarant, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link"  %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -32,6 +38,8 @@
 
 <br>
 
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to 'New Restuarant', new_restuarant_path, class: "btn btn-link"  %>
+<% end %>
 
 <%= image_tag "https://s3-us-west-1.amazonaws.com/yelpdemoa/happy_footer.png" %>
