--- a/app/views/restuarants/show.html.erb
+++ b/app/views/restuarants/show.html.erb
@@ -52,6 +52,14 @@
 			<td>
 			<div class="star-rating" data-score= <%= review.rating %>> </div>
 			<p> <%= h(review.comment).gsub(/\n/, '<br/>').html_safe %> </p>
+
+			<% if user_signed_in? %>
+				<% if (review.user== current_user) || (current_user.admin?) %>
+					<%= link_to "Edit", edit_restuarant_review_path(@restuarant, review) %>
+
+					<%= link_to "Delete", restuarant_review_path(@restuarant, review), method: :delete %>
+					<% end %>
+					<% end %>
 			</td>
 			</tr>
 			<% end %>
