Optimized User Signup

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,18 +5,18 @@
 
   <div class="field">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+    <%= f.text_field :first_name, autofocus: true, class: "form-control", placeholder:"Nikolas"%>
   </div>
 
   <div class="field">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, class: "form-control" %>
+    <%= f.text_field :last_name, class: "form-control", placeholder: "Tesla" %>
   </div>
 
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, class: "form-control" %>
+    <%= f.email_field :email, class: "form-control" , placeholder: "randomemail@yelpdemoa.com"%>
   </div>
 
   <div class="field">
